# CV_TBANK_SIRIUS_EXAM

./: .gitignore  API.py  Dockerfile  FinalModelYOLO.py  README.md  T_BANK_logo_detect_model.py  YOLO_model_train.py  data.yaml  detect_logo_in_train.py  finalData.yaml  main.py  move_script.py  pyproject.toml  requirements.txt  test_API.py  using_model.py  val_model.py  vizualize.py
