[project]
name = "cv-tbank-sirius-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pydantic>=2.11.9",
    "ultralytics>=8.3.201",
    "uvicorn>=0.35.0",
]
